syntax = "proto3";

package server.user;

import "google/protobuf/empty.proto";

option go_package = "server/api/v1";

import "v1/shared/Store.proto";

message SoreIDRequest {
  string ID = 1;
}

service StoreController {
  rpc GetByID(SoreIDRequest) returns (server.shared.Store) {}
  rpc GetAll(google.protobuf.Empty) returns (server.shared.Stores) {}
  rpc GetStayables(google.protobuf.Empty) returns (server.shared.StayableStores) {}
  rpc GetStayableByID(SoreIDRequest) returns (server.shared.StayableStore) {}
}